objects/Job__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Jobs</relationshipLabel>
        <relationshipName>Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <label>Job</label>
    <nameField>
        <displayFormat>Job-{0000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <recordTypes>
        <fullName>Job</fullName>
        <active>true</active>
        <label>Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>Job_Sample</fullName>
        <active>true</active>
        <label>Job Sample</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>